--- a/installer/mod_rewrite/.htaccess
+++ b/installer/mod_rewrite/.htaccess
@@ -11,14 +11,14 @@
 	RewriteEngine on
 
 	# Automatically determine and set the METRO_ENV variable
-        #RewriteCond %{HTTP_HOST} ^local.domain.com$
-        #RewriteRule (.*) $1 [E=METRO_ENV:development]
+  #RewriteCond %{HTTP_HOST} ^local.domain.com$
+  #RewriteRule (.*) $1 [E=METRO_ENV:development]
 
-        #RewriteCond %{HTTP_HOST} ^stage.domain.com$
-        #RewriteRule (.*) $1 [E=METRO_ENV:staging]
+  #RewriteCond %{HTTP_HOST} ^stage.domain.com$
+  #RewriteRule (.*) $1 [E=METRO_ENV:staging]
 
-        #RewriteCond %{HTTP_HOST} ^domain.com$
-        #RewriteRule (.*) $1 [E=METRO_ENV:production]
+  #RewriteCond %{HTTP_HOST} ^domain.com$
+  #RewriteRule (.*) $1 [E=METRO_ENV:production]
 
 	# NOTICE: If you get a 404 play with combinations of the following commented out lines
 	#AllowOverride All
@@ -44,6 +44,13 @@
 	# Send request via index.php (again, not if its a real file or folder)
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_FILENAME} !-d
-        RewriteRule ^(.*)$ index.php?/$1 [L]
+
+	<IfModule mod_php5.c>
+		RewriteRule ^(.*)$ index.php/$1 [L]
+	</IfModule>
+
+	<IfModule !mod_php5.c>
+		RewriteRule ^(.*)$ index.php?/$1 [L]
+	</IfModule>
 
 </IfModule>
