--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,6 @@ before_script:
   - mysql -u root -e "CREATE USER 'metrocms'@'127.0.0.1' IDENTIFIED BY 'password'"
   - mysql -u root -e "GRANT ALL PRIVILEGES ON *.* to 'metrocms'@'127.0.0.1' IDENTIFIED BY 'password'"
 script: phpunit -c tests/integration
+branches:
+  only:
+    - 1.0.2
